🎉 BREAKTHROUGH: Complete pipeline working with WER 40.32%
ACHIEVEMENT: End-to-end brain-to-text pipeline working!
- Brain signals → phonemes → words pipeline functional
- WER: 40.32% on validation set (1,426 samples)
- PER: ~19% (estimated from training)
- This establishes our competition baseline!

KEY FILES AND FIXES:
- README.md: Complete documentation of breakthrough and setup instructions
- model_training/: Fixed evaluation pipeline with proper dtype handling
  * data_augmentations.py: Match input dtype for gauss smoothing kernel
  * evaluate_model.py: CPU map_location for model loading
  * evaluate_model_helpers.py: Proper autocast and dtype conversion
- src/evaluate_simple.py: Quick PER evaluation without LM
- configs/rnn_official_exact.yaml: Working hyperparameters

INFRASTRUCTURE FIXES:
- Resolved all Windows/WSL symlink issues for LM compilation
- Fixed PyTorch BFloat16/Float32 compatibility issues
- Set up Redis communication for LM server
- Proper conda environment isolation (b2txt25_lm)

WHAT THIS MEANS:
✅ We have a reproducible baseline
✅ Full evaluation pipeline works
✅ Team can now iterate on improvements
✅ Ready for Phase 2: Model architecture enhancements

--- a/configs/rnn_official_exact.yaml
+++ b/configs/rnn_official_exact.yaml
@@ -78,12 +78,12 @@ dataset:
     smooth_kernel_std: 2
 
   neural_dim: 512
-  batch_size: 64  # OFFICIAL: 64 (we had 48 for safety, but try official)
+  batch_size: 48  # TUNED FOR 16GB VRAM: Reduced from 64 to 48 for stable overnight training.
   n_classes: 41
   max_seq_elements: 500
   days_per_batch: 4
   seed: 1
-  num_dataloader_workers: 4
+  num_dataloader_workers: 4 # Default for local training
   loader_shuffle: false
   must_include_days: null
   test_percentage: 0.1
